# prefix-trie

./: .gitignore  Cargo.toml  LICENSE-MIT  NOTICE-THIRD-PARTY.md  Readme.md  codecov.yml
.github/workflows/: coverage.yml  rust.yml  test.yml
benches/: .gitignore  20260511-initial-state-peer-193.0.0.56AS3333.parquet  20260511-mutations-peer-193.0.0.56AS3333.parquet  benchmark.rs  common.rs  memory.rs  report.py
benches/data/: 20260511-initial-state-peer-193.0.0.56AS3333-ipv6.parquet  20260511-mutations-peer-193.0.0.56AS3333-ipv6.parquet  README.md
benches/tests/: prefix_cmp.rs
coverage/: tarpaulin-report.html
docs/: DATA_STRUCTURES.md
examples/: random_access.rs
src/: *OpenSSL output*  aggregate.rs  allocator.rs  entry.rs  fmt.rs  get.rs  inner.rs  iter.rs  lib.rs  node.rs  prefix.rs  remove.rs  remove_children.rs  serde.rs  set.rs  set_backup  table.rs  test.rs
src/fuzzing/: aggregate.rs  basic.rs  mod.rs  set_ops.rs  traversals.rs
src/fuzzing/views/: combinations.rs  covering_difference.rs  covering_union.rs  difference.rs  equality.rs  intersection.rs  mod.rs  trie_ref.rs  union.rs
src/joint/: mod.rs  prefix.rs  set.rs  test.rs
src/joint/map/: entry.rs  iter.rs  mod.rs  test.rs
src/map/: entry.rs  iter.rs  mod.rs
src/set/: difference.rs  intersection.rs  mod.rs  union.rs
src/subtrie/: intersection.rs  mod.rs  union.rs
src/trieview/: covering_difference.rs  covering_union.rs  difference.rs  equality.rs  intersection.rs  iter.rs  mod.rs  test.rs  trie_ref.rs  trie_ref_mut.rs  union.rs
