[package]
name = "prefix-trie"
version = "0.4.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tiborschneider/prefix-trie"
homepage = "https://github.com/tiborschneider/prefix-trie"
documentation = "https://docs.rs/prefix-trie"
readme = "Readme.md"
categories = ["network-programming"]
keywords = ["IP", "prefix", "trie", "collection"]
description = "Prefix trie datastructure (both a set and a map) that provides exact and longest-prefix matches."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmark"
harness = false
required-features = ["ipnet"]

[[example]]
name = "random_access"
required-features = ["ipnet"]

[features]
default = ["ipnet"]
serde = ["dep:serde"]
ipnetwork = ["dep:ipnetwork"]
ipnet = ["dep:ipnet"]

[dependencies]
ipnet = { version = "2", optional = true}
ipnetwork = { version = "0.20", optional = true }
num-traits = "0.2"
serde = { version = "1", optional = true}

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
generic-tests = "0.1.2"
ip_network_table-deps-treebitmap = "0.5.0"
paste = "1.0.10"
pretty_assertions = "1.4.0"
rand = "0.8.5"
