[package]
name = "prefix-trie"
version = "0.8.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tiborschneider/prefix-trie"
homepage = "https://github.com/tiborschneider/prefix-trie"
documentation = "https://docs.rs/prefix-trie"
readme = "Readme.md"
categories = ["network-programming"]
keywords = ["IP", "prefix", "trie", "tree", "collection"]
description = "Prefix trie (tree) datastructure (both a set and a map) that provides exact and longest-prefix matches."
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmark"
harness = false
required-features = ["ipnet"]

[[example]]
name = "random_access"
required-features = ["ipnet"]

[features]
default = ["ipnet"]
serde = ["dep:serde", "ipnet/serde", "ipnetwork/serde", "cidr/serde"]
ipnetwork = ["dep:ipnetwork"]
ipnet = ["dep:ipnet"]
cidr = ["dep:cidr"]

[dependencies]
ipnet = { version = "2", optional = true}
ipnetwork = { version = "0.20", optional = true }
cidr = { version = "0.3", optional = true }
num-traits = "0.2"
serde = { version = "1", optional = true}
either = "1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
generic-tests = "0.1.2"
ip_network_table-deps-treebitmap = "0.5.0"
itertools = "0.14.0"
pretty_assertions = "1.4.0"
quickcheck = "1.0.3"
rand = "0.8.5"
serde_json = "1.0.140"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
