[package]
name = "prefix-trie"
version = "0.9.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tiborschneider/prefix-trie"
homepage = "https://github.com/tiborschneider/prefix-trie"
documentation = "https://docs.rs/prefix-trie"
readme = "Readme.md"
categories = ["network-programming"]
keywords = ["IP", "prefix", "trie", "tree", "collection"]
description = "Prefix trie (tree) datastructure (both a set and a map) that provides exact and longest-prefix matches."
rust-version = "1.71.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.bench]
debug = true

[[bench]]
name = "benchmark"
harness = false
required-features = ["ipnet"]

[[bench]]
name = "memory"
required-features = ["ipnet"]

[[example]]
name = "random_access"
required-features = ["ipnet"]

[features]
default = ["ipnet"]
serde = ["dep:serde", "ipnet/serde", "ipnetwork/serde", "cidr/serde"]
ipnetwork = ["dep:ipnetwork"]
ipnet = ["dep:ipnet"]
cidr = ["dep:cidr"]

[dependencies]
ipnet = { version = "2.0.0", optional = true}
ipnetwork = { version = "0.20", optional = true }
cidr = { version = "0.3", optional = true }
num-traits = "0.2.4"
serde = { version = "1", optional = true}
either = "1"
array-const-fn-init = "0.1.1"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
flate2 = "1.1.9"
generic-tests = "0.1.2"
ip_network_table-deps-treebitmap = "0.5.0"
itertools = "0.14.0"
paste = "1.0.10"
pprof = { version = "0.14.1", features = ["flamegraph"] }
pretty_assertions = "1.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde_json = "1.0.140"
